move Heat Report to DFs

--- a/content/data-features/heat-report-archive/2021.md
+++ b/content/data-features/heat-report-archive/2021.md
@@ -54,7 +54,7 @@ The Health Department examined heat stress deaths occurring during the months of
 
 Among NYC residents, there were 102 heat stress deaths during the warm season from 2010 to 2019. There were an average of 10 deaths per year, with a minimum of 0 deaths in 2014, the coolest year, and a maximum of 33 in 2011, which had one of the hottest heat waves during the time period examined. Most deaths occurred in July (73%) and August (15%) as shown in Figure 1. In 2020, there were 4 heat stress deaths, though that number is provisional and subject to change because mortality records are not finalized. 
 
-<img src="2021/2021-fig-1.jpeg" class="border-top border-bottom px-6" alt="Figure 1: percent of heat stress deaths by month among NYC residents, 2010 to 2019. Heat stress deaths are highest in July.">
+<img src="../2021/2021-fig-1.jpeg" class="border-top border-bottom px-6" alt="Figure 1: percent of heat stress deaths by month among NYC residents, 2010 to 2019. Heat stress deaths are highest in July.">
 
 |       Year  	|     n (deaths)  	|     %  	|     n, extreme heat days  	|     Maximum heat index reached, degrees F  	|     Length of longest extreme heat event, days   	|
 |-------------	|:---------------:	|:------:	|:-------------------------:	|:------------------------------------------:	|:------------------------------------------------:	|
@@ -123,7 +123,7 @@ Demographics
 
 ### Age of heat stress decedents, 2010-2019 
 
-<img src="2021/2021-by-age.jpeg" class="border-top border-bottom px-6" alt="Age of heat stress decedents. Older people die at higher rates.">
+<img src="../2021/2021-by-age.jpeg" class="border-top border-bottom px-6" alt="Age of heat stress decedents. Older people die at higher rates.">
 
 ### Health and other risk factors  
 
@@ -156,7 +156,7 @@ More than a quarter (n=16, 26%) of decedents had an electric fan present and on,
 
 Previous Health Department studies have found that air conditioning access differs across race and class. New Yorkers who are Black and low-income New Yorkers are less likely to own or use an AC during hot weather, and cost is the main reason why.2 While more than 90% of NYC households have air conditioning, access is also lower in neighborhoods where more people are living with limited financial resources. 
 
-<img src="2021/2021-fig-2.jpeg" class="border-top border-bottom px-6" alt="Air conditioning presence among people exposed to heat at home.">
+<img src="../2021/2021-fig-2.jpeg" class="border-top border-bottom px-6" alt="Air conditioning presence among people exposed to heat at home.">
 
 ### Heat-exacerbated deaths  
 
@@ -166,7 +166,7 @@ We estimated heat-exacerbated mortality risk and number of deaths for 2010 throu
 - an indicator for extreme heat event days defined by the National Weather Service’s heat advisory threshold for NYC. Based on the Health Department’s previous analysis of heat-exacerbated mortality, heat advisories are for at least 2 consecutive days with 95°F or higher daily maximum heat index (HI) or any day with a maximum HI of 100°F or higher.  
 - the range of hot daily maximum temperatures that includes both extreme heat event days and other hot days. We assessed risk for days ranging from the median maximum daily temperature of 82°F through the highest temperature during the period. 
 
-We included deaths occurring on the date of exposure to hot weather and over the following 3 days, because previous Health Department studies have shown that heat-related deaths can occur up to 3 days after the initial hot weather. Detailed methods used to estimate risks and attributable deaths can be found [here](Heat_Mortality_Methods_2021.pdf).   
+We included deaths occurring on the date of exposure to hot weather and over the following 3 days, because previous Health Department studies have shown that heat-related deaths can occur up to 3 days after the initial hot weather. Detailed methods used to estimate risks and attributable deaths can be found [here](../2021/Heat_Mortality_Methods_2021.pdf).   
 
 From 2010 to 2018, the estimated number of heat-exacerbated deaths associated with extreme heat events was 98 (95% Confidence Interval [95CI]: 59, 133) on average each year.  
 
@@ -176,9 +176,9 @@ The estimated number of heat-exacerbated deaths from May-September for all hot d
 
 The number of extreme heat event days each year has stayed about the same (approximately 10 days/year) in the past decade. However, the number of non-extreme hot days is increasing (e.g., 45 days with daily maximum temperature of 83-94°F for 1971-1980 vs. 63 days for 2011-2020). The daily low temperature (usually nighttime temperature) is a good measure of (UHI) the urban heat island  effect, because it measures the heat retained after the sun has set. The daily low temperature is also increasing (Figure 4), highlighting the importance of in-home cooling. Cities like NYC experience a UHI effect, with hotter temperatures than surrounding suburbs and more rural areas, because they have large amounts of concrete and other building materials that trap heat. 
 
-<img src="2021/2021-fig-3.jpg" class="border-top border-bottom px-6">
+<img src="../2021/2021-fig-3.jpg" class="border-top border-bottom px-6">
 
-<img src="2021/2021-fig-4.jpg" class="border-top border-bottom px-6">
+<img src="../2021/2021-fig-4.jpg" class="border-top border-bottom px-6">
 
 ### Community-level impacts 
 
