Updated 2 files via CloudCannon.

--- a/content/data-features/heat-report/5-fig-3-4.md
+++ b/content/data-features/heat-report/5-fig-3-4.md
@@ -7,4 +7,4 @@ draft: false
 
 <hr class="my-4">
 
-<strong>Figure 4:</strong> <span>cumulative relative risk</span> and <span>95% confidence intervals</span> of heat-exacerbated deaths for daily maximum temperature over same-day and 3 previous days, May-September (2011-2020) <img alt="Figure 4" class="p-2" src="fig-4.jpeg" />
+<strong>Figure 4:</strong> <span>cumulative relative risk</span> and <span>95% confidence intervals</span> of heat-exacerbated deaths for daily maximum temperature over same-day and 3 previous days, May-September (2012-2021). <img alt="Figure 4" class="p-2" src="fig-4.jpeg" />
