Updated 1 file via CloudCannon.

--- a/content/data-features/heat-report/5-fig-3-4.md
+++ b/content/data-features/heat-report/5-fig-3-4.md
@@ -1,7 +1,7 @@
 ---
 draft: false
 ---
-<span style="font-weight:bold">Figure 3:</span> Annual average heat-exacerbated deaths for <span style="color:red;font-weight:bold">Extreme Heat Event days</span>, and <span style="color:orange;font-weight:bold">days at or above 82°F</span> in 5-year moving time windows
+<span style="font-weight:bold">Figure 3:</span> Annual average heat-exacerbated deaths for <span style="color:red;font-weight:bold">Extreme Heat Event days</span>, and <span style="color:orange;font-weight:bold">days at or above 82°F</span> in 5-year moving time windows. The x-axis label denotes the beginning year of 5-year windows (e.g., “2017” for 2017-2021).
 
 <div style="min-height:625px"><script type="text/javascript" defer src="https://datawrapper.dwcdn.net/6b0cV/embed.js?v=6" charset="utf-8"></script><noscript><img src="https://datawrapper.dwcdn.net/6b0cV/full.png" alt="" /></noscript></div>
 
